--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <img src="../assets/images/logo.png" alt="Logo" class="d-inline-block align-text-top logo">
     </a>
     <a routerLink="/" class="navbar-brand">
-      Wayfarer
+      Fantasy Team
     </a>
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
