get decription for website to show up

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
     <a routerLink="/" >
-      <img src="../assets/images/logo.png" alt="Logo" class="d-inline-block align-text-top logo">
+      <img src="https://www.si.com/.image/c_limit%2Ccs_srgb%2Cq_auto:good%2Cw_400/MTY4MjU5Mjk2MjY2MTY4MjIx/alburquerque1jpg.webp" alt="Logo" class="d-inline-block align-text-top logo">
     </a>
     <a routerLink="/" class="navbar-brand">
       Fantasy Team
