--- a/src/app/landing/fantasy-team-description/fantasy-team-description.component.html
+++ b/src/app/landing/fantasy-team-description/fantasy-team-description.component.html
@@ -1,1 +1,9 @@
-<p>fantasy-team-description works!</p>
+<h1>Wayfarer is ...</h1>
+<section>
+    <div class="card" *ngFor="let topic of topics" style="width: 22rem;">    
+      <div class="card-body">
+        <h5 class="card-title">{{topic.title}}</h5>
+        <p class="card-text">{{topic.body}}</p> 
+      </div>
+    </div>
+</section>
