--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,26 @@
 .logo {
     width: 50px;
     height: 55px;
-    padding: 0;
+    padding: 10px;
     margin: 0;
   }
+
+  /* body, html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+} */
+
+body, html {
+    overflow: auto; /* Allow scrolling */
+}
+
+
+input {
+    border-color: black;
+}
+
+.navbar {
+    padding: 0% 3%;
+}
