update my cards info to display correct info for my app

--- a/src/app/fantasy-team-description/fantasy-team-description.component.html
+++ b/src/app/fantasy-team-description/fantasy-team-description.component.html
@@ -1,22 +1,39 @@
 <h2>DreamPitch Is</h2>
 <div class="container">
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Explore the World</h5>
-          <p class="card-text">Our travel app is your passport to adventure. Discover fantastic new destinations, plan itineraries, and book accommodations with ease, all in one place.</p>
-        </div>
+  <div class="card" style="width: 18rem">
+    <div class="card-body">
+      <h5 class="card-title">Craft Your Dream Team, Conquer the Pitch!</h5>
+      <p class="card-text">
+        Dive into the ultimate fantasy soccer experience and handpick the
+        world's top talents to form your unbeatable squad. Every decision
+        matters. Build a team not just based on fame, but on form, strategy, and
+        synergy.
+      </p>
     </div>
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Wanderlust Companion</h5>
-          <p class="card-text">Whether you're a solo explorer or traveling with friends and family, our app helps you navigate unfamiliar places, find local hotspots, and create unforgettable memories.</p>
-        </div>
+  </div>
+  <div class="card" style="width: 18rem">
+    <div class="card-body">
+      <h5 class="card-title">
+        Real-time Performance Analytics – Be in the Know!
+      </h5>
+      <p class="card-text">
+        Stay ahead of the game with our real-time player ratings. As matches
+        unfold around the globe, we bring you up-to-the-minute evaluations of
+        how your chosen superstars are performing. Make informed decisions,
+        tweak your lineup, and ensure you're always fielding the best of the
+        best.
+      </p>
     </div>
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Travel Smarter</h5>
-          <p class="card-text">From real-time flight updates to offline maps and language translation, our app is your ultimate travel assistant, ensuring a stress-free and enjoyable journey.</p>
-        </div>
+  </div>
+  <div class="card" style="width: 18rem">
+    <div class="card-body">
+      <h5 class="card-title">More Than a Game – It's a Soccer Community!</h5>
+      <p class="card-text">
+        Engage with other team managers in our vibrant community forums, share
+        strategies, debate player choices, and celebrate victories. Plus, enjoy
+        exclusive content, expert analyses, and insider tips to elevate your
+        team managing prowess.
+      </p>
     </div>
+  </div>
 </div>
-
