--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,13 @@
         <a routerLink="/home" class="nav-link">Home</a>
       </li>
     </ul>
+
+    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <li class="nav-item">
+        <a routerLink="/login" class="nav-link">Login</a>
+      </li>
+    </ul>
+
     <form class="d-flex" role="search">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">          <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
