--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     </a>
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
-        <a routerLink="/home" class="nav-link">Home</a>
+        <a routerLink="/home" class="nav-link">Create</a>
       </li>
     </ul>
 
