update app.html to have correct routerlink for create page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,31 @@
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
-    <a routerLink="/" >
-      <img src="https://www.si.com/.image/c_limit%2Ccs_srgb%2Cq_auto:good%2Cw_400/MTY4MjU5Mjk2MjY2MTY4MjIx/alburquerque1jpg.webp" alt="Logo" class="d-inline-block align-text-top logo">
+    <a routerLink="/">
+      <img
+        src="https://www.si.com/.image/c_limit%2Ccs_srgb%2Cq_auto:good%2Cw_400/MTY4MjU5Mjk2MjY2MTY4MjIx/alburquerque1jpg.webp"
+        alt="Logo"
+        class="d-inline-block align-text-top logo"
+      />
     </a>
-    <a routerLink="/" class="navbar-brand">
-      Fantasy Team
-    </a>
+    <a routerLink="/" class="navbar-brand"> Fantasy Team </a>
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
-        <a routerLink="/home" class="nav-link">Create</a>
+        <a routerLink="/create" class="nav-link">Create</a>
       </li>
     </ul>
-
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
         <a routerLink="/login" class="nav-link">Login</a>
       </li>
     </ul>
-
     <form class="d-flex" role="search">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">          <button class="btn btn-outline-success" type="submit">Search</button>
+      <input
+        class="form-control me-2"
+        type="search"
+        placeholder="Search"
+        aria-label="Search"
+      />
+      <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
   </div>
 </nav>
