add register button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,12 +10,17 @@
     <a routerLink="/" class="navbar-brand"> Fantasy Team </a>
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
-        <a routerLink="/create" class="nav-link">Create</a>
+        <a routerLink="/register" class="nav-link">Register</a>
       </li>
     </ul>
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
         <a routerLink="/login" class="nav-link">Login</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <li class="nav-item">
+        <a routerLink="/create" class="nav-link">Create</a>
       </li>
     </ul>
     <form class="d-flex" role="search">
