implement registration logic

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,18 +1,17 @@
-
 <div class="container">
     <h2>Register</h2>
     <form (ngSubmit)="onRegisterSubmit()">
       <div class="form-group">
-        <label for="name">name:</label>
-        <input type="text" id="username" name="username" [(ngModel)]="registerForm.username" required>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" [(ngModel)]="registerForm.name" required>
       </div>
       <div class="form-group">
-        <label for="emailAddress">emailAddress:</label>
+        <label for="emailAddress">Email Address:</label>
+        <input type="email" id="emailAddress" name="emailAddress" [(ngModel)]="registerForm.emailAddress" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Password:</label>
         <input type="password" id="password" name="password" [(ngModel)]="registerForm.password" required>
-      </div>
-      <div class="form-group">
-        <label for="password">password:</label>
-        <input type="password" id="confirmPassword" name="confirmPassword" [(ngModel)]="registerForm.confirmPassword" required>
       </div>
       <button type="submit">Register</button>
     </form>
