--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,19 +1,16 @@
-<div class="container">
-    <h2>Register</h2>
-    <form (ngSubmit)="onRegisterSubmit()">
-      <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" [(ngModel)]="registerForm.name" required>
-      </div>
-      <div class="form-group">
-        <label for="emailAddress">Email Address:</label>
-        <input type="email" id="emailAddress" name="emailAddress" [(ngModel)]="registerForm.emailAddress" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" [(ngModel)]="registerForm.password" required>
-      </div>
-      <button type="submit">Register</button>
-    </form>
-  </div>
+<form (ngSubmit)="onRegisterSubmit()" #registerForm="ngForm">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" [(ngModel)]="registerData.name" required>
+    </div>
+    <div class="form-group">
+      <label for="email">Email Address</label>
+      <input type="email" id="email" name="email" [(ngModel)]="registerData.emailAddress" required>
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" [(ngModel)]="registerData.password" required>
+    </div>
+    <button type="submit">Register</button>
+  </form>
   
