--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -1,1 +1,50 @@
-<p>create works!</p>
+<!-- fantasy-teams.component.html -->
+
+<div class="container">
+    <div class="row">
+      <!-- Left Sidebar: Sections -->
+      <div class="col-md-3">
+        <!-- Section: Roster -->
+        <div class="card mb-3">
+          <div class="card-header">
+            Roster
+          </div>
+          <div class="card-body">
+            <!-- Display the user's fantasy team players here -->
+            <ul class="list-group">
+              <li class="list-group-item" *ngFor="let player of userFantasyTeamPlayers">
+                {{ player.name }}
+                <button class="btn btn-danger btn-sm float-right" (click)="removePlayer(player.id)">Remove</button>
+              </li>
+            </ul>
+          </div>
+        </div>
+  
+        <!-- Section: Search for Players -->
+        <div class="card">
+          <div class="card-header">
+            Search for Players
+          </div>
+          <div class="card-body">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Player Name" [(ngModel)]="playerSearchTerm">
+              <button class="btn btn-primary mt-2" (click)="searchPlayers()">Search</button>
+            </div>
+            <!-- Display search results here -->
+            <ul class="list-group">
+              <li class="list-group-item" *ngFor="let player of searchResults">
+                {{ player.name }}
+                <button class="btn btn-success btn-sm float-right" (click)="addPlayer(player.id)">Add to Roster</button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+  
+      <!-- Right Sidebar: Other Content -->
+      <div class="col-md-9">
+        <!-- Other content related to fantasy team management -->
+      </div>
+    </div>
+  </div>
+  
