--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -1,20 +1,20 @@
-
+<!-- 
 <div class="container">
     <div class="row">
      
       <div class="col-md-3">
  
         <div class="card mb-3">
-          <div class="card-header">
-            Roster
+          <div class="card-header"> -->
+            <!-- Roster
           </div>
           <div class="card-body">
 
             <ul class="list-group">
               <li class="list-group-item" *ngFor="let player of userFantasyTeamPlayers">
-                {{ player.name }}
+                {{ player.name }} -->
                 <!-- <button class="btn btn-danger btn-sm float-right" (click)="removePlayer(player.id)">Remove</button> -->
-              </li>
+              <!-- </li>
             </ul>
           </div>
         </div>
@@ -25,15 +25,15 @@
           </div>
           <div class="card-body">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Player Name" [(ngModel)]="playerSearchTerm">
+              <input type="text" class="form-control" placeholder="Player Name" [(ngModel)]="playerSearchTerm"> -->
               <!-- <button class="btn btn-primary mt-2" (click)="searchPlayers()">Search</button> -->
-            </div>
-            <!-- Display search results here -->
-            <ul class="list-group">
+            <!-- </div> -->
+       
+            <!-- <ul class="list-group">
               <li class="list-group-item" *ngFor="let player of searchResults">
-                {{ player.name }}
+                {{ player.name }} -->
                 <!-- <button class="btn btn-success btn-sm float-right" (click)="addPlayer(player.id)">Add to Roster</button> -->
-              </li>
+              <!-- </li>
             </ul>
           </div>
         </div>
@@ -41,6 +41,6 @@
   
       <div class="col-md-9">
       </div>
-    </div>
+    </div> -->
 
-  
+  <h1> BRO</h1>
