--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,28 @@
-<div class="container">
-    <h2>Login</h2>
-    <form (ngSubmit)="onLoginSubmit()" #loginForm="ngForm">
-      <div class="form-group">
-        <label for="emailAddress">Email Address</label>
-        <input type="email" id="emailAddress" name="emailAddress" [(ngModel)]="loginData.emailAddress" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" [(ngModel)]="loginData.password" required>
-      </div>
-      <button type="submit">Login</button>
-    </form>
-  </div>
-  
+<div class="container mt-5">
+  <h2 class="mb-4">Login</h2>
+  <form (ngSubmit)="onLoginSubmit()" #loginForm="ngForm">
+    <div class="mb-3">
+      <label for="emailAddress" class="form-label">Email Address</label>
+      <input
+        type="email"
+        class="form-control"
+        id="emailAddress"
+        name="emailAddress"
+        [(ngModel)]="loginData.emailAddress"
+        required
+      />
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Password</label>
+      <input
+        type="password"
+        class="form-control"
+        id="password"
+        name="password"
+        [(ngModel)]="loginData.password"
+        required
+      />
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
+  </form>
+</div>
