--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,40 @@
-<nav class="navbar bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a routerLink="/">
+    <a routerLink="/" class="navbar-brand">
       <img
         src="https://www.si.com/.image/c_limit%2Ccs_srgb%2Cq_auto:good%2Cw_400/MTY4MjU5Mjk2MjY2MTY4MjIx/alburquerque1jpg.webp"
         alt="Logo"
         class="d-inline-block align-text-top logo"
       />
+      DreamPitch
     </a>
-    <a routerLink="/" class="navbar-brand"> Fantasy Team </a>
-    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+    
+    <!-- Collapse button for smaller screens -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a routerLink="/create" class="nav-link">Create</a>
+        </li>
+      </ul>
+    </div>
+    
+    <ul class="navbar-nav">
       <li class="nav-item">
         <a routerLink="/register" class="nav-link">Register</a>
       </li>
-    </ul>
-    <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
         <a routerLink="/login" class="nav-link">Login</a>
       </li>
     </ul>
-    <ul class="navbar-nav me-auto mb-2 mb-md-0">
-      <li class="nav-item">
-        <a routerLink="/create" class="nav-link">Create</a>
-      </li>
-    </ul>
-    <form class="d-flex" role="search">
-      <input
-        class="form-control me-2"
-        type="search"
-        placeholder="Search"
-        aria-label="Search"
-      />
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
   </div>
 </nav>
 <router-outlet></router-outlet>
+
+
+
+
+
