--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,12 +8,20 @@
       />
       DreamPitch
     </a>
-    
+
     <!-- Collapse button for smaller screens -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
-    
+
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -21,7 +29,7 @@
         </li>
       </ul>
     </div>
-    
+
     <ul class="navbar-nav">
       <li class="nav-item">
         <a routerLink="/register" class="nav-link">Register</a>
@@ -33,8 +41,3 @@
   </div>
 </nav>
 <router-outlet></router-outlet>
-
-
-
-
-
